2002-11-21  Jim Meyering  <jim@meyering.net>

	* strdup.c (strdup): Tweak comment and initial #if/#include.

	Merge in changes from the coreutils.

	2002-09-25  Paul Eggert  <eggert@twinsun.com>
	* fsusage.c [! HAVE_INTTYPES_H && HAVE_STDINT_H] Include <stdint.h>.
	(UINTMAX_MAX) [!defined UINTMAX_MAX]: New macro.
	(PROPAGATE_ALL_ONES): Work even if X is unsigned and narrower than
	int.  Work more efficiently if X is the same width as uintmax_t.
	Do not compare X to -1, to avoid bogus compiler warning.
	(get_fs_usage): (uintmax_t) -1 -> UINTMAX_MAX to avoid a cast.
	Don't assume that f_frsize and f_bsize are the same type.

	* mountlist.c: #undef MNT_IGNORE before defining it, to avoid warning
	on FreeBSD.

	* makepath.c (make_path): Restore umask *before* creating the final
	component.
	(make_path): Minor reformatting.

	* xmalloc.c: Adjust to work with new autoconf macros, AC_FUNC_MALLOC
	and AC_FUNC_REALLOC: test #ifndef HAVE_MALLOC/HAVE_REALLOC.

	* mountlist.h (ME_DUMMY): Don't count entries of type `auto' as dummy
	ones.  At least on GNU/Linux systems, `auto' means something else.
	From Michael Stone.

2002-11-20  Paul Eggert  <eggert@twinsun.com>

	Merge argmatch cleanups from Bison.  Assume C89.

	* argmatch.c: Include config.h here, not in argmatch.h.
	Include stdlib.h, for EXIT_FAILURE.
	Always include <string.h>, since we assume C89.
	(EXIT_FAILURE): Remove pre-C89 bug workaround.
	* argmatch.h: Do not include <config.h> or <sys/types.h>.
	Include <stddef.h> instead, since it's all we need for size_t.
	(PARAMS): Remove.  All uses removed.
	(ARRAY_CARDINALITY): Do not bother to #undef.
	(ARRAY_CARDINALITY, ARGMATCH, ARGCASEMATCH, invalid_arg,
	ARGMATCH_VALID, XARGMATCH, XARGCASEMATCH):
	Remove unnecessary parentheses.
	(ARGMATCH_VALID, XARGMATCH, XARGCASEMATCH):
	Insert necessary parentheses.
	(ARGMATCH_CONSTRAINT, ARGMATCH_VERIFY): New macros.
	(ARGMATCH_ASSERT): Use ARGMATCH_CONSTRAINT.

2002-11-19  Bruno Haible  <bruno@clisp.org>
